hphp/hack/test/typecheck/constraint_array_index/before/0_null_coalesce.php.exp
ERROR: File "0_null_coalesce.php", line 3, characters 3-8:
This is not an object of type `KeyedContainer`, this is an int (Typing[4324])
  File "0_null_coalesce.php", line 3, characters 3-3:
  Definition is here
