hphp/hack/test/typecheck/constraint_array_index/before/0_null_coalesce.php
<?hh
function f(): void {
  0["a"] ?? null;
}
